# panel6-stats

./: LICENSE  README.md  index.html  index_old.html  pyproject.toml
assets/: Item_Popularity_Table.html  time_metrics.csv
data/: good_logs_new.pkl  logs_metrics_new.csv  logs_new.pkl  session_data_new.csv
scripts/: event_processor.py  generate_plots.py  generate_report.py  preprocess_logs.py
src/panel6_stats/: visualization.py
